# back-edesoft

./: .gitatributes  .gitignore  Dockerfile  Dockerfile.aws  README.md  docker-compose.yml  entrypoint.sh  env.credentials  pyproject.toml
back_edesoft/: apps.py  models.py  serializers.py  urls.py
back_edesoft/migrations/: 0001_initial.py
back_edesoft/views/: Tasks.py  Users.py  __init__.py
core/: __init__.py  celery.py  settings.py  urls.py
core/exceptions/: youtube_exception.py
core/services/: youtube.py
core/tasks/: __init__.py  csv_from_s3.py  health.py
core/tools/: auth.py  debug.py  openapi.py
